updated yaml file - added jest - added tests for reference
